# practicaxarxes2026

./: README.md
client-skel/: Makefile  main.c  tap.c  tap.h
server-skel/: pyproject.toml
server-skel/src/vpnswitch/: main.py
